--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -3,7 +3,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  justify-items: center;
+  /* height: 100vh; */
+  height: 100%;
+  width: 100%;
 }
 
 .lds-dual-ring {
